syntax = "proto3";

package auction;
option go_package = "https://github.com/frederikgantriis/AuctionSystem-DISYS;auction";

service Auction {
    rpc bid (BidRequest) returns (BidReply) {}
    rpc result (ResultRequest) returns (ResultReply) {}
}

message BidRequest {
    int32 id = 1;
    int32 bid = 2;
}

message BidReply {
    outcomes outcome = 1;
}

enum outcomes {
    FAIL = 0;
    SUCCESS = 1;
    EXCEPTION = 2;
}

message ResultRequest {
}

message ResultReply {
    int32 highestBid = 1;
    int32 timeLeft = 2;
}
